updated ri stub
