# server/controllers/DmService.js
@@ -47,33 +47,6 @@ exports.dmStorePOST = function(args, res, next) {
    * body Dm-store-body Body in JSON
    * returns ack-response
    **/
-  var body_post = {};
-  body_post['application/json'] = {"key": "string", "value": "string"};
-
-  var request = require('request');
-  request.post('http://localhost:8081/put', body_post);	
-	
-	
-  var examples = {};
-  examples['application/json'] = {
-  "message" : "aeiou"
-};
-	
-  if (Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  } else {
-    res.end();
-  }
-}
-
-exports.dmUpdatePOST = function(args, res, next) {
-  /**
-   * Update a stored key 
-   *
-   * body Dm-update-body Body in JSON
-   * returns ack-response
-   **/
   var examples = {};
   examples['application/json'] = {
   "message" : "aeiou"
